--- a/calc_tax/index.html
+++ b/calc_tax/index.html
@@ -5,7 +5,7 @@
     <!-- モバイル用：デバイス幅、拡大縮小禁止 -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>税込み計算アプリ</title>
+    <title>Calc-App</title>
 
     <!-- jQuery -->
     <script src="../lib/jquery.min.js"></script>
@@ -21,17 +21,17 @@
   </head>
   <body>
     <div class="container">
-      <h1>税込み計算アプリ</h1>
+      <h1>Calc-App</h1>
 
       <!-- 入力テキスト -->
       <div class="form-group">
-        <label>金額</label>
-        <input type="number" id="price" name="name" value="1000" class="form-control" />
+        <label>Price</label>
+        <input type="number" id="price" name="name" placeholder="1000" class="form-control" />
       </div>
 
       <div class="form-group">
-        <label>税率</label>
-        <input type="number" id="taxRate" name="name" value="8" class="form-control" />
+        <label>Tax Rate</label>
+        <input type="number" id="taxRate" name="name" value="10" class="form-control" />
       </div>
 
       <!-- ボタン -->
@@ -44,12 +44,12 @@
 
       <!-- 出力テキスト -->
       <div class="form-group">
-        <label>税額</label>
+        <label>Tax Amount</label>
         <input type="number" id="taxAmount" name="name" value="" class="form-control" />
       </div>
 
       <div class="form-group">
-        <label>税込</label>
+        <label>Tac Included</label>
         <input type="number" id="taxIncluded" name="name" value="" class="form-control" />
       </div>
     </div>
